
3.71  2013-01-02
  - Modernized ".travis.yml".
  - Improved Mojo::UserAgent to warn more often about failed events.
  - Improved monkey_patch to patch multiple functions at once. (jberger)
  - Improved documentation.
  - Fixed small memory leak in Mojo::DOM.

3.70  2012-12-23
  - Added accept_interval setting to Hypnotoad.
  - Reduced idle CPU usage of Mojo::Reactor::Poll.
  - Improved Mojo::Server to die more gracefully if an application class could
    not be found.
  - Improved documentation.

3.69  2012-12-20
  - Deprecated Mojolicious::Routes->namespace in favor of
    Mojolicious::Routes->namespaces.
  - Added color_field helper to Mojolicious::Plugin::TagHelpers.
  - Added date_field helper to Mojolicious::Plugin::TagHelpers.
  - Added datetime_field helper to Mojolicious::Plugin::TagHelpers.
  - Added email_field helper to Mojolicious::Plugin::TagHelpers.
  - Added month_field helper to Mojolicious::Plugin::TagHelpers.
  - Added number_field helper to Mojolicious::Plugin::TagHelpers.
  - Added range_field helper to Mojolicious::Plugin::TagHelpers.
  - Added search_field helper to Mojolicious::Plugin::TagHelpers.
  - Added tel_field helper to Mojolicious::Plugin::TagHelpers.
  - Added time_field helper to Mojolicious::Plugin::TagHelpers.
  - Added url_field helper to Mojolicious::Plugin::TagHelpers.
  - Added week_field helper to Mojolicious::Plugin::TagHelpers.
  - Improved Mojo::Base to use utf8.
  - Improved documentation.
  - Improved tests.

3.68  2012-12-16
  - Added monkey_patch function to Mojo::Util.
  - Added ".travis.yml".
  - Modernized ".gitignore".
  - Updated jQuery to version 1.8.3.
  - Improved documentation.
  - Improved tests.
  - Converted README to markdown.
  - Fixed small export bug in Mojolicious::Lite. (jberger)

3.67  2012-12-15
  - Added support for MIME type prioritization to Mojolicious::Types.
  - Improved respond_to to prioritize multiple MIME types if the
    X-Requested-With header is set to the value "XMLHttpRequest".