@@ -1,9 +1,11 @@
 
 3.71  2013-01-02
   - Modernized ".travis.yml".
+  - Improved Mojo::EventEmitter to warn about unhandled error events.
   - Improved Mojo::UserAgent to warn more often about failed events.
   - Improved monkey_patch to patch multiple functions at once. (jberger)
   - Improved documentation.
+  - Improved tests.
   - Fixed small memory leak in Mojo::DOM.
 
 3.70  2012-12-23
